# yu-playlist

./: .editorconfig  .gitignore  Makefile  README.md  client.py  config.py  desktop.ini  justfile  main.py  pyproject.toml  util.py
src/: bridge.py  client.py  config.py  log.py  main.py  shadow.py  textual.py  util.py  yt.py
tests/: test_shadow.py  test_textual.py  test_util.py
