[project]
name = "yu-playlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "google-api-python-client>=2.177.0",
   "google-api-python-client-stubs>=1.30.0",
   "google-auth-httplib2>=0.2.0",
   "google-auth-oauthlib>=1.2.2",
   "pathvalidate>=3.3.1",
   "prompt-toolkit>=3.0.52",
   "wcwidth>=0.2.13",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
   "pytest>=8.4.2",
   "pytest-cov>=7.0.0",
]
